<resources>
    <string name="app_name">نام اپلیکیشن</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_menu">صفحه اصلی</string>
    <string name="title_category">دسته بندی ها</string>
    <string name="profile">پروفایل</string>
    <string name="about_us">درباره ما</string>
    <string name="connect_with_us">تماس با ما</string>
    <string name="user_name">نام کاربر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello every body!</string>
    <string name="hello">hello</string>
    <string name="name">نام</string>
    <string name="family">فامیلی</string>
    <string name="email">ایمیل</string>
    <string name="enter">ورود</string>
    <string name="cancel">انصراف</string>
    <string name="my_email">My email : vahidtalaie3600@gmail.com</string>
    <string name="github_link">Github link : https://github.com/vahid3600</string>
    <string name="apps_link">Released Apps : https://cafebazaar.ir/developer/azmoonsara</string>
    <string name="about_me">My name is vahid and i am an android developer, if you want to contact me or see my projects go to contact us in menu and use my gmail or github link   Good luck.</string>
    <string name="form_activity">Form Activity</string>
    <string name="retrofit_activity">Retrofit Activity</string>
    <string name="submit">Submit</string>
</resources>
